gen/v25.1/rpk/rpk-cluster-quotas-alter.adoc
= rpk cluster quotas alter
:description: rpk cluster quotas alter

Add or delete a client quota

This command allows you to add or delete a client quota.

A client quota consists of an entity (to whom the quota is applied) and a quota 
type (what is being applied).

There are two entity types supported by Redpanda: client ID and client ID 
prefix.

Assigning quotas to default entity types is possible using the '--default' flag.

You can perform a dry run using the '--dry' flag.

== Usage

[,bash]
----
rpk cluster quotas alter [flags]

Examples:

Add quota (consumer_byte_rate) to client ID 'foo':
  rpk cluster quotas alter --add consumer_byte_rate=200000 \
    --name client-id=foo

Add quota (consumer_byte_rate) to client ID starting with 'bar-':
  rpk cluster quotas alter --add consumer_byte_rate=200000 \
    --name client-id-prefix=bar-

Add quota (producer_byte_rate) to default client ID:
  rpk cluster quotas alter --add producer_byte_rate=180000 --default client-id

Remove quota (producer_byte_rate) from client ID 'foo':
  rpk cluster quotas alter --delete producer_byte_rate \
    --name client-id=foo
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--add |strings |Key=value quota to add, where the value is a float number (repeatable).

|--default |strings |Entity type for default matching, where type is client-id or client-id-prefix (repeatable).

|--delete |strings |Key of the quota to delete (repeatable).

|--dry |- |Key of the quota to delete (repeatable).

|-h, --help |- |Help for alter.

|--name |strings |Entity for exact matching. Format type=name where type is client-id or client-id-prefix (repeatable).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===